# claude_sdk_testing

./: .gitignore  README.md  csv_analysis_agent.py  implementation.md  main.py  project_plan.md  pyproject.toml
data/: sample_sales.csv
