[project]
name = "claude-sdk-testing"
version = "0.1.0"
description = "CSV Analysis Agent using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "claude-code-sdk>=0.1.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]
